--- a/src/CollectionViewPlayground/CollectionViewPlayground/Views/MainView.xaml
+++ b/src/CollectionViewPlayground/CollectionViewPlayground/Views/MainView.xaml
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="CollectionViewPlayground.Views.MainView"
@@ -10,7 +10,8 @@
                 Command="{Binding BasicCommand}"/>
             <Button
                 Text="Carousel"
-                Command="{Binding CarouselCommand}"/>
+                Command="{Binding CarouselCommand}"
+                IsVisible="false"/>
             <Button
                 Text="Horizontal List"
                 Command="{Binding HorizontalListCommand}"/>
